# colony-noise-stimuli

./: .gitignore  README.md  Stimulus_Visualization_Check.ipynb  chorus-config-inverted.json  chorus-config.json  colony-noise-stimuli.yml  correct_choices  correct_choices.yml  noisy_gng.js  noisy_shape.js  pyproject.toml  sound-jstim.js
center-init/: 2ac-config-inverted-p1.5.json  2ac-config-inverted-p1.json  2ac-config-inverted-p2-segmented2.json  2ac-config-inverted-p2-segmented4.json  2ac-config-inverted-p2-segmented6.json  2ac-config-inverted-p2-segmented8.json  2ac-config-inverted-p2.json  2ac-config-p1.5.json  2ac-config-p1.json  2ac-config-p2-segmented2.json  2ac-config-p2-segmented4.json  2ac-config-p2-segmented6.json  2ac-config-p2-segmented8.json  2ac-config-p2.json  cn-center-init-inverted.json  cn-center-init.json  correct_choices.yml  experiment.yml  experiment_2motif.yml  experiment_4motif.yml  experiment_6motif.yml  experiment_8motif.yml
experiment.archived/: 2ac-config-segmented-100-set0-invertedNo.json  2ac-config-segmented-100-set0-invertedYes-centerNo.json  2ac-config-segmented-100-set0-invertedYes.json  2ac-config-segmented-100-set1-invertedNo-centerNo.json  2ac-config-segmented-100-set1-invertedNo.json  2ac-config-segmented-100-set1-invertedYes.json  2ac-config-segmented-20-set0-invertedNo.json  2ac-config-segmented-20-set0-invertedYes.json  2ac-config-segmented-20-set1-invertedNo.json  2ac-config-segmented-20-set1-invertedYes.json  (+38 more)
pre-probe/: config.yml  (+24 more)
stimuli/: core.py  double_up_generator.py  pyproject.toml  songs.yml  stim_gen.py
(+437 files in other folders)
